# spinachlang-api

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
spinachlangapi/: __init__.py  __main__.py  cli.py  main.py
